--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "hls.js": "^1.6.15",
+    "html-to-image": "^1.11.13",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^4.1.0",
     "lucide-react": "^0.562.0",
     "maplibre-gl": "^5.16.0",
     "next": "16.1.4",
