--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "maplibre-gl": "^5.16.0",
     "next": "16.1.4",
     "nodemailer": "^7.0.13",
+    "radix-ui": "^1.4.3",
     "react": "19.2.3",
     "react-day-picker": "^9.13.0",
     "react-dom": "19.2.3",
